# flatsql

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.claude/: TASKS.md  ralph-loop.local.md  settings.json
.github/workflows/: ci.yml  npm-publish.yml
cpp/: CMakeLists.txt  README.md
cpp/include/flatsql/: btree.h  database.h  geo_functions.h  schema_parser.h  sql_parser.h  sqlite_engine.h  sqlite_vtab.h  storage.h  types.h
cpp/schemas/: mpe_schema.fbs  mpe_schema_generated.h
cpp/scripts/: build-native.sh  build-wasm.sh  setup-emsdk.sh
cpp/src/: btree.cpp  database.cpp  flatsql.cpp  flatsql_capi.cpp  geo_functions.cpp  schema_parser.cpp  sql_parser.cpp  sqlite_engine.cpp  sqlite_vtab.cpp  storage.cpp
cpp/test/: benchmark.cpp  mpe_benchmark.cpp  test_main.cpp
docs/: JUNCTION_TABLES.md  flatsql-api.js  flatsql-worker.js  flatsql.js  flatsql.wasm  index.html
examples/: basic-usage.ts  streaming-example.ts
schemas/: btree_index.fbs  table_metadata.fbs  wallet.fbs
scripts/: build-wasm.sh  install-emsdk.sh
src/: flatbuffer-accessor.ts  index.ts
src/btree/: btree.ts  index.ts  types.ts
src/core/: database.ts  index.ts  table-store.ts
src/schema/: parser.ts  types.ts
src/storage/: index.ts  stacked-flatbuffers.ts  types.ts
test/: basic.test.ts  wasi.test.ts
wasm/: demo.html  example.html  flatsql.js  flatsql.wasm  index.d.ts  index.js  test-integration.mjs  test-jsonschema.mjs  test-node.mjs  test-queries.mjs
